# dprint-plugin-tailwindcss

./: .dprintignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test-config.sh  test-dprint.json  test-sorting.sh  test.html
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  PARSING_STRATEGY.md  PERFORMANCE.md  PLUGIN_COMPATIBILITY.md  PROJECT_STATUS.md  README.md  RELEASE_PROCESS.md  STEP_2_SUMMARY.md  STEP_3_SUMMARY.md  STEP_4_SUMMARY.md  STEP_5_SUMMARY.md  STEP_6_SUMMARY.md  STEP_7_SUMMARY.md  STEP_8_SUMMARY.md  TESTING.md
docs/implementation/: CONFIGURATION.md  CORE_PLUGIN_STRUCTURE.md
scripts/: build.sh  release.sh
src/: config.rs  custom_config_tests.rs  edge_case_tests.rs  extractor.rs  format_aware_tests.rs  integration.rs  integration_tests.rs  lib.rs  parser.rs  performance_tests.rs  plugin_ecosystem_tests.rs  prettier_compat_tests.rs  real_world_tests.rs  sorter.rs
test-configs/: invalid-unknown-property.json  invalid-wrong-type.json  valid-custom.json  valid-default.json  valid-disabled.json
test-files/: input.html  input.tsx  input.vue
